@@ -81,6 +81,7 @@ export("%&%",
        "printSpMatrix2",
        "qrR",
        "rankMatrix",
+       "qr2rankMatrix",
        "readHB",
        "readMM",
        "sparse.model.matrix",
